projetGL/src/test/deca/context/invalid/provided/invalide_class_00_superclass.deca
// Descitpion : test d'existence de la superclasse.
// Sortie:
// ERROR : super-classe B n'est pas définie dans l'environment.

class A extends B{
    int x;
    float y;
}